* Add array support in operators

Version 0.1 - 2013-08-28
* Initial release