@@ -1,3 +1,4 @@
+* Fix usage mixture between Div operator and function
 * Add array support in operators
 
 Version 0.1 - 2013-08-28
